# fakeos

./: CMakeLists.txt  README.md
tools/: CMakeLists.txt  make_boot.cpp  tools_config.h.in
